Fix: fix style and send messaging

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
       </div>
     </center> -->
     <div class="--dark-theme" id="chat">
-      <h1 class="chat__conversation-panel__input2">Тапчсолт</h1>
+      <div class="chat__conversation-panel2">
+        <h1 id="userID" class="chat__conversation-panel__input2">Тапчсолт</h1>
+      </div>
 
       <div class="chat-board" id="chatBoard"></div>
 
